# ctk-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: development_task.yaml
.github/workflows/: deploy.yaml  test.yaml
scripts/diagnoses/: README.md  diagnoses_lut.md  markdown_to_json.py  markdown_to_yaml.py
src/ctk_api/: main.py
src/ctk_api/core/: __init__.py  config.py  middleware.py
src/ctk_api/data/: diagnoses.json  diagnoses.yaml  openai_default_chat_completion_system_prompt.txt  prompts.yaml
src/ctk_api/microservices/: __init__.py  elastic.py
src/ctk_api/routers/: __init__.py
src/ctk_api/routers/diagnoses/: __init__.py  controller.py  schemas.py  views.py
src/ctk_api/routers/summarization/: __init__.py  anonymizer.py  controller.py  schemas.py  views.py
tests/: .test.env  conftest.py  test_fibonacci.py
tests/endpoint/: conftest.py  test_diagnoses.py  test_summarization.py
tests/integration/: conftest.py  test_diagnoses_endpoints.py  test_elastic.py  test_summarization_endpoints.py
tests/unit/: test_anonymizer.py  test_middleware.py
